Edit extended case form

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_MasterDataPanelContent.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_MasterDataPanelContent.cshtml
@@ -256,7 +256,7 @@
             </a>
         </li>
         <li>
-            <a href="@Url.Action("CustomerForms", "ExtendedCase", new {customerId = Model.Id})">
+            <a href="@Url.Action("GetCustomerForms", "ExtendedCase", new { customerId = Model.Id })">
                 @Translation.GetCoreTextTranslation("Editerbara formulär")
             </a>
         </li>
