#155779 - building, floor settings added

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/ComputerFieldsSettingsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/ComputerFieldsSettingsViewModel.cshtml
@@ -236,6 +236,12 @@
             @Html.EditorFor(m => m.PlaceFieldsSettingsModel.RoomFieldSettingModel, "Settings/FieldSettingForComputerModel")
         </tr>
         <tr>
+            @Html.EditorFor(m => m.PlaceFieldsSettingsModel.BuildingFieldSettingModel, "Settings/FieldSettingForComputerModel")
+        </tr>
+        <tr>
+            @Html.EditorFor(m => m.PlaceFieldsSettingsModel.FloorFieldSettingModel, "Settings/FieldSettingForComputerModel")
+        </tr>
+        <tr>
             @Html.EditorFor(m => m.PlaceFieldsSettingsModel.AddressFieldSettingModel, "Settings/FieldSettingForComputerModel")
         </tr>
         <tr>
