--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
@@ -126,7 +126,7 @@
                 if (placeHolder !== null) {
                     if (getStringWithoutSpecialChars(getStringWithoutSweChars(translations[i].Name)) == getStringWithoutSpecialChars(getStringWithoutSweChars(placeHolder))) {
                         var translationText = (translations[i].TranslationText == null ? "" : translations[i].TranslationText)
-                        res = res + "<tr><td><label for='" + idName + "label" + translations[i].Language.Id + "'><span>@Translation.GetCoreTextTranslation("Fältetikett") " + translations[i].Language.LanguageId + " </span>" + (translations[i].IsDefaultLanguage == true ? "<span class='required-defaultLng'>*</span>" : "") + "</label ></td > <td><input class='labelName' type='text' id='" + idName + "label" + translations[i].Language.Id + "' data-dhhelpdesk-langId='" + translations[i].Language.Id + "' data-dhhelpdesk-lang='" + translations[i].Language.LanguageId + + "' data-dhhelpdesk-section='" + isSection + "' placeholder='" + translationText + "' value='" + translationText + "'></td></tr>"
+                        res = res + "<tr><td><label for='" + idName + "label" + translations[i].Language.Id + "'><span>@Translation.GetCoreTextTranslation("Fältetikett") " + translations[i].Language.LanguageId + " </span>" + (translations[i].IsDefaultLanguage == true ? "<span class='required-defaultLng'>*</span>" : "") + "</label ></td > <td><input class='labelName' type='text' id='" + idName + "label" + translations[i].Language.Id + "' data-dhhelpdesk-langId='" + translations[i].Language.Id + "' data-dhhelpdesk-lang='" + translations[i].Language.LanguageId + "' data-dhhelpdesk-section='" + isSection + "' placeholder='" + translationText + "' value='" + translationText + "'></td></tr>"
                     }
                 }
             }
@@ -465,17 +465,18 @@
             items[i].sectionName = document.getElementById(obj.id).innerText;
             items[i].controls = [];
 
-            //console.log($("#" + obj.id).closest(".field").children(".labelName"))
-            console.log()
+            var sTranslations = document.getElementById(obj.id.replace("header", "")).querySelectorAll(".labelName");
+            var sTranslationsProperty = [...sTranslations].filter(item => item.getAttribute('data-dhhelpdesk-langid') == defaultLanguageId);
 
-            document.getElementById(obj.id.replace("header", "")).querySelectorAll(".labelName").foreach(function (i, obj) {
+            for (s = 0; s < sTranslations.length; s++) {
                 var translation = {};
-                console.log(obj.attr('data-dhhelpdesk-langId'))
-                //translation.LanguageId = obj.attr('data-dhhelpdesk-langId');
-                //translation.Property = obj.attr('');
-                //translation.Text = obj.value;
-                //fieldTranslations.push();
-            });
+                translation.Languageid = sTranslations[s].getAttribute('data-dhhelpdesk-langid');
+                translation.Property = sTranslationsProperty[0].value;
+                translation.Text = sTranslations[s].value;
+                translation.IsSection = sTranslations[s].getAttribute('data-dhhelpdesk-section');
+
+                fieldTranslations.push(translation);
+            }
 
             getNextUntil(obj.parentElement.parentElement.parentElement.parentElement, "[data-type='section']").forEach(function (obj, n) {
                 if (obj.querySelector('.field-label') != null) {
@@ -486,15 +487,25 @@
                     var content = contentTinyMce[0] ? 'function(m) { return ' + tinymce.get(contentTinyMce[0].id).getContent() + ' }' : ""
 
                     items[i].controls[n] = {
-                        id: getStringWithoutSpecialChars(label) + (n + 1),
+                        id: getStringWithoutSpecialChars(getStringWithoutSweChars(label)) + (n + 1),
                         type: obj.getAttribute('data-type'),
                         label: label,
                         required: required,
                         valueBinding: content
                     }
 
-                    console.log(obj.querySelectorAll(".labelName"))
-                    //console.log(document.getElementById(obj.id.replace("header", ""))).querySelectorAll(".labelName")
+                    var fTranslations = obj.querySelectorAll(".labelName");
+                    var fTranslationsProperty = [...fTranslations].filter(item => item.getAttribute('data-dhhelpdesk-langid') == defaultLanguageId);
+
+                    for (f = 0; f < fTranslations.length; f++) {
+                        var translation = {};
+
+                        translation.LanguageId = fTranslations[f].getAttribute('data-dhhelpdesk-langId');
+                        translation.Property = fTranslationsProperty[0].value;
+                        translation.Text = fTranslations[f].value;
+                        translation.IsSection = fTranslations[f].getAttribute('data-dhhelpdesk-section');
+                        fieldTranslations.push(translation);
+                    }
                 }
             });
 
@@ -514,7 +525,7 @@
                 status: selectedCaseSolutions.length == 0 ? "false" : "true", //$("#formActive").is(":checked") ? "true" : "false",
                 caseSolutionIds: selectedCaseSolutions,
                 sections: items,
-                //translations: fieldTranslations
+                translations: fieldTranslations
             };
 
             $.ajax({
